# phoracek.github.io

./: .gitignore  Makefile  README.md  README.rst  config.toml  index.html  pelicanconf.py  period_archives.html  publishconf.py  theme.toml
archive/: 2015.html  2016.html
articles/linux/: another-xterm-user-en.html
category/: linux.html  {slug}.html
code/sharp-memory-display/: Cargo.toml  Makefile
code/sharp-memory-display/src/: main.rs
content/: _index.md
content/blog/: first.md
content/linux/: 20151015_league-of-legends-on-fedora.rst  20160705_another-xterm-user.rst
content/posts/: rich-content.md  sharp-memory-display.md
feeds/: all.atom.xml  linux.atom.xml
output/: index.html  period_archives.html
output/archive/: 2015.html
output/articles/linux/: another-xterm-user-en.html  league-of-legends-on-fedora-en.html
output/category/: linux.html  {slug}.html
output/feeds/: all.atom.xml
output/tag/: leagueoflegends.html  linux.html  playonlinux.html  workenv.html  {slug}.html
tag/: fedora.html  leagueoflegends.html  linux.html  playonlinux.html  workenv.html  {slug}.html
theme/css/: style.css
theme/static/css/: style.css
theme/templates/: article.html  base.html  disqus.html  index.html  translations.html
themes/d3c3nt/static/: global.css
themes/d3c3nt/templates/: article.html  index.html
