[package]
name = "embedded_display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = [ "device" ] }
systick-monotonic = "1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32h7xx-hal = { version = "0.14", features = [
  "stm32h750v",
  "rt",
  "revision_v",
  "defmt",
] }
daisy = { version = "0.8.0", features = ["seed_1_1"] }
sharp-memory-display = { version = "0.3", features = ["ls027b7dh01"] }
embedded-graphics = "0.7"

[profile.dev]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
